tdf#147876 Fix crash when cancelling Dialog import dlg

Regression from 9a55b97e980bbf2a0ce12841f6168f1f7545ac96

Change-Id: I3fc35981a0cb81e5b59236ec3b07450aec10541a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132737
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit 618d40799d25474c48d984ce1d52b0f08f220958)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132855
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>